--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="metagraph">
     <meta name="description" content="让不同知识背景的人尽快站在同一起跑线；以知识库为单位构建某个领域的知识内容，建立知识点之间的关联关系，最终构建出全平台的跨领域知识图谱">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>metagraph</title>
+    <title>Metagraph</title>
   </head>
   <% if (process.env.NODE_ENV === 'production') { %>
     <% for(var css of htmlWebpackPlugin.options.cdn.css) { %>
